updated plots and legends.

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Dmatrices/Aro_8049287Chr8_DataMatrix.txt
 Dmatrices/Aus_21875129Chr8_DataMatrix.txt
 Dmatrices/Ind_1239331Chr8_DataMatrix.txt
 Dmatrices/SHjap_12704242Chr8_DataMatrix.txt
+Notebooks/Complementary_data/data_beta.vcf
